fixed letter spacing

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -51,7 +51,7 @@ html, body {
         overflow: hidden;
         text-wrap: nowrap;
         font-size: 15px;
-        letter-spacing: -3px;
+
     }
     &:not(.active-card, .next-card) {
         &::before {
